--- a/src/components/ContactButton/ContactButton.scss
+++ b/src/components/ContactButton/ContactButton.scss
@@ -13,6 +13,7 @@
     display: flex;
     align-items: center;
     font-weight: 600;
+    cursor: pointer;
 
     &:hover {
       background-color: $buttonPrimaryAltPressed;
