added menu styles

--- a/src/index.scss
+++ b/src/index.scss
@@ -23,4 +23,5 @@
 @import "./components/Footer/Footer.scss";
 @import "./components/Menu/Menu.scss";
 @import "./components/Summary/Summary.scss";
-@import "./components/ContactButton/ContactButton.scss"
+@import "./components/ContactButton/ContactButton.scss";
+@import "./components/MenuItem/MenuItem.scss";
