--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -1,5 +1,20 @@
 .menu {
   width: 330px;
-  background-color: $bgPrimary;
+  background-color: $bgSecondary;
   margin: 20px 25px;
+
+  section {
+    background-color: $bgPrimary;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    padding: 0 10px;
+    margin-bottom: 20px;
+  }
+  h3 {
+    font-size: 17px;
+    margin-bottom: 10px;
+  }
 }
