--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -1,5 +1,6 @@
 .menu {
   width: 330px;
+  min-width: 330px;
   background-color: $bgSecondary;
   margin: 20px 25px;
 
@@ -10,7 +11,7 @@
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
-    padding: 0 10px;
+    padding: 2px 10px 0 10px;
     margin-bottom: 20px;
   }
   h3 {
