--- a/src/index.scss
+++ b/src/index.scss
@@ -25,3 +25,4 @@
 @import "./components/Summary/Summary.scss";
 @import "./components/ContactButton/ContactButton.scss";
 @import "./components/MenuItem/MenuItem.scss";
+@import "./components/Banner/Banner.scss";
