--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,10 +1,11 @@
 body {
-    width: 100%;
-    min-width: 1175px;
+  width: 100%;
+  min-width: 1175px;
 }
 
 .page {
-    margin-top: 20px;
-    flex-grow: 1;
-    min-width: 414px;
+  margin-top: 20px;
+  flex-grow: 1;
+  min-width: 414px;
+  max-width: 1600px;
 }
