added jsx & update header

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,13 +8,14 @@
 @import "./Layout/Layout.scss";
 
 //Page styling
-@import "./pages/Courses/Courses.scss";
+@import "./pages/CoursePage/CoursePage.scss";
 @import "./pages/Error/Error.scss";
 @import "./pages/Experiences/Experiences.scss";
 @import "./pages/HardSkills/HardSkills.scss";
 @import "./pages/Hobby/Hobby.scss";
 @import "./pages/Index/Index.scss";
 @import "./pages/Missions/Missions.scss";
+@import "./pages/Course/Course.scss";
 @import "./pages/SoftSkills/SoftSkills.scss";
 @import "./pages/Tools/Tools.scss";
 
