--- a/src/index.scss
+++ b/src/index.scss
@@ -24,6 +24,6 @@
 @import "./components/Footer/Footer.scss";
 @import "./components/Menu/Menu.scss";
 @import "./components/Summary/Summary.scss";
-@import "./components/ContactButton/ContactButton.scss";
 @import "./components/MenuItem/MenuItem.scss";
 @import "./components/Banner/Banner.scss";
+@import "./components/Buttons/Buttons.scss"
