created betButton & Divider

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -29,7 +29,7 @@ header {
       font-style: normal;
       display: flex;
       align-items: center;
-      color: $borderSoftAlt;
+      color: $typoTabInactiveAlt;
       background: $bgHeader;
       
       &.active{
