--- a/src/index.scss
+++ b/src/index.scss
@@ -28,3 +28,4 @@
 @import "./components/MenuItem/MenuItem.scss";
 @import "./components/Banner/Banner.scss";
 @import "./components/Buttons/Buttons.scss";
+@import "./components/Divider/Divider.scss";
