--- a/src/components/Buttons/Buttons.scss
+++ b/src/components/Buttons/Buttons.scss
@@ -1,52 +1,70 @@
 .header-button {
-    height: 30px;
-    width: 90px;
-    margin-left: 7px;
-    border-radius: 7px;
-    -webkit-border-radius: 7px;
-    -moz-border-radius: 7px;
-    -ms-border-radius: 7px;
-    -o-border-radius: 7px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 12px;
-    font-weight: 700;
-    cursor: pointer;
+  height: 30px;
+  width: 90px;
+  margin-left: 7px;
+  border-radius: 7px;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  -ms-border-radius: 7px;
+  -o-border-radius: 7px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+.contact-button {
+  color: $typoBrand;
+  background-color: $buttonPrimaryAlt;
+
+  &:hover {
+    background-color: $buttonPrimaryAltPressed;
   }
-  
-  .contact-button {
-    color: $typoBrand;
-    background-color: $buttonPrimaryAlt;
-  
-    &:hover {
-      background-color: $buttonPrimaryAltPressed;
-    }
-    &:active {
-      background-color: $buttonPrimaryAltSelected;
-    }
+  &:active {
+    background-color: $buttonPrimaryAltSelected;
   }
-  
-  .github {
-    color: $typoPrimaryAlt;
-    background-color: $buttonCashoutAlt;
-  
-    &:hover {
-      background-color: $buttonCashoutAltPressed;
-    }
-    &:active {
-      background-color: $buttonCashoutAltSelected;
-    }
+}
+
+.github {
+  color: $typoPrimaryAlt;
+  background-color: $buttonCashoutAlt;
+
+  &:hover {
+    background-color: $buttonCashoutAltPressed;
   }
-  
-  .linkedin {
-    color: $typoPrimaryAlt;
-    background-color: $buttonCashoutSelected;
-  
-    &:hover {
-      background-color: $buttonCashoutPressed;
-    }
-    &:active {
-      background-color: $buttonCashout;
-    }
+  &:active {
+    background-color: $buttonCashoutAltSelected;
   }
+}
+
+.linkedin {
+  color: $typoPrimaryAlt;
+  background-color: $buttonCashoutSelected;
+
+  &:hover {
+    background-color: $buttonCashoutPressed;
+  }
+  &:active {
+    background-color: $buttonCashout;
+  }
+}
+
+.betButton {
+  height: 100%;
+  width: 80px;
+  border-radius: 7px;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  -ms-border-radius: 7px;
+  -o-border-radius: 7px;
+  background-color: $buttonBetting;
+  cursor: pointer;
+  font-weight: 700;
+  font-size: 16px;
+  
+  &:hover {
+    background-color: $buttonBettingPressed;
+  }
+}
