--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -9,3 +9,31 @@ body {
   min-width: 414px;
   max-width: 1600px;
 }
+
+.mainCard {
+  height: 255px;
+  margin-top: 13px;
+  border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
+  overflow: hidden;
+  background-color: $bgPrimary;
+
+  img{
+      height: 100px;
+      width: 100%;
+      object-fit: cover;
+      object-position:center;
+  }
+
+  .card_text{
+      padding: 10px;
+      li{
+        font-size: 15px;
+      }
+  }
+}
+
+
