created cards & buttons ++ change favicon

--- a/src/index.scss
+++ b/src/index.scss
@@ -29,3 +29,5 @@
 @import "./components/Banner/Banner.scss";
 @import "./components/Buttons/Buttons.scss";
 @import "./components/Divider/Divider.scss";
+@import "./components/Card/Card.scss";
+
