--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -8,44 +8,12 @@ body {
   flex-grow: 1;
   min-width: 414px;
   max-width: 1600px;
+  display: flex;
+  flex-direction: column;
+  gap: 13px;
 
   section {
     width: 100%;
   }
 }
 
-.mainCard {
-  height: 255px;
-  margin-top: 13px;
-  border-radius: 15px;
-  -webkit-border-radius: 15px;
-  -moz-border-radius: 15px;
-  -ms-border-radius: 15px;
-  -o-border-radius: 15px;
-  overflow: hidden;
-  background-color: $bgPrimary;
-  flex: 1;
-
-  img {
-    height: 100px;
-    width: 100%;
-    object-fit:cover;
-    object-position: center;
-  }
-
-  .card_text {
-    padding: 10px;
-    li {
-      font-size: 15px;
-    }
-  }
-}
-
-.halfCard {
-  width: 100%;
-  display: flex;
-  gap: 13px;
-
-  article{
-  }
-}
